--- a/frontend/src/app/shared/components/file-links/storage-information/storage-information.html
+++ b/frontend/src/app/shared/components/file-links/storage-information/storage-information.html
@@ -18,10 +18,19 @@
 <div
   class="button-box"
 >
-  <button class="button button_no-margin">
-    <op-icon icon-classes="button--icon spot-icon spot-icon_external-link" class="op-icon--wrapper">
-      <i class="button--icon spot-icon spot-icon_external-link"></i>
+  <button
+    class="button button_no-margin"
+    (click)="buttonClickEventEmitter.emit()"
+  >
+    <op-icon
+      icon-classes="button--icon spot-icon spot-icon_external-link"
+      class="op-icon--wrapper">
+      <i
+        class="button--icon spot-icon spot-icon_external-link"
+      ></i>
     </op-icon>
-    <span class="button--text">Open Nextcloud</span>
+    <span
+      class="button--text"
+    >{{buttonText}}</span>
   </button>
 </div>
