--- a/frontend/src/app/shared/components/file-links/storage-information/storage-information.html
+++ b/frontend/src/app/shared/components/file-links/storage-information/storage-information.html
@@ -18,9 +18,9 @@
 <div
   class="button-box"
 >
-  <button
+  <button *ngFor="let button of buttons"
     class="button button_no-margin"
-    (click)="buttonClickEventEmitter.emit()"
+    (click)="button.action()"
   >
     <op-icon
       icon-classes="button--icon spot-icon spot-icon_external-link"
@@ -31,6 +31,6 @@
     </op-icon>
     <span
       class="button--text"
-    >{{buttonText}}</span>
+    >{{button.label}}</span>
   </button>
 </div>
